# Holocube

./: .gitmodules  README.en.md  README.md  holocubic.kicad_sch
firmware/main/: CMakeLists.txt  ap.c  app_sr.c  app_sr_handler.c  audio.c  bsp_i2c.c  bsp_i2c.h  main.c  settings.c  wm8978.c
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/: HoloCubic_AIO.cpp  app_sntp.c  app_sntp.h  common.cpp  common.h  config.cpp  config.h  main.cpp  network.cpp  network.h
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/app/anniversary/: anniversary.cpp  anniversary.h  anniversary_gui.c  anniversary_gui.h
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/app/audio_spectrum/: ap.cpp  audio_spectrum.cpp  audio_spectrum.h  audio_spectrum_gui.c  audio_spectrum_gui.h
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/app/bilibili_fans/: bilibili.cpp  bilibili.h  bilibili_gui.c  bilibili_gui.h
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/app/example/: example.cpp  example_gui.c  example_gui.h
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/app/file_manager/: ESP32FtpServer.cpp  file_manager.cpp  file_manager.h  file_manager_gui.c  (+1 more)
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/driver/: codec.c  codec.h  disk_fs.cpp  disk_fs.h  display.cpp  display.h  flash_fs.h  imu.cpp  imu.h  rgb_led.cpp  rgb_led.h  sd_card.cpp  sd_card.h  wm8978.c  wm8978.h
firmware/main/HoloCubic_AIO/HoloCubic_Firmware/src/sys/: app_controller.cpp  app_controller.h  app_controller_config.cpp  app_controller_gui.c  app_controller_gui.h
firmware/main/minitv/: SmallDesktopDisplay.cpp
(+107 files in other folders)
